Fix clipping icon

--- a/src/styles/components/footer.module.scss
+++ b/src/styles/components/footer.module.scss
@@ -13,8 +13,8 @@
       font-size: 0;
 
       svg {
-        height: 1.875rem;
-        width: 1.875rem;
+        height: 2rem;
+        width: 2rem;
       }
     }
   }
